fix navbar spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,13 +15,8 @@
  $grayMediumLight: #eaeaea;
 
 body {
-	padding-top: 75px;
+	padding-top: 100px;
 }
-
-header {
-	padding-bottom: 20px;
-}
-
 footer {
 	margin-top: 45px;
 	padding-top: 5px;
